<resources>
    <string name="app_name" translatable="false">Robot Scouter</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="no_connection">No internet connection</string>
    <string name="sign_in_required">Sign in required</string>
    <string name="share">Share</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="cancelled">Cancelled</string>
    <string name="number_too_big_error">Please enter a number between 0 and 2^63 – 1</string>
    <string name="tutorial_create_first_team_title">Create your first team</string>
    <string name="tutorial_sign_in_title">Sign in</string>
    <string name="tutorial_sign_in_rationale">
        Signing in lets you easily sync data with other devices across your team.
    </string>
    <string name="tutorial_no_team_selected_hint">Select a team to start scouting</string>
    <string name="tutorial_no_teams_hint">Teams you add appear here</string>
    <string name="tutorial_no_scouts_hint">Scouts you add appear here</string>
    <string name="tutorial_no_templates_hint">Scout templates you add appear here</string>
    <string name="tutorial_no_metrics_hint">Metrics you add appear here</string>
    <string name="tutorial_loading_metrics_hint">Loading…\nCheck your internet connection</string>
    <string name="media_should_upload_title">Upload media to The Blue Alliance?</string>
    <string name="media_should_upload_rationale">
        If you choose to opt-in, your media will be shared with
        <a href="https://thebluealliance.com">The Blue Alliance</a> to help other Robot Scouter
        users and the greater TBA community.\n\nPlease <b>READ THIS</b>:\n  ●
        Real people review your suggestions, be graciously professional.\n  ●
        Only take pictures of robots.\n  ●
        Ensure the robot is clearly visible.
    </string>
    <string name="media_save_response_title">Don\'t remind me again</string>
    <string name="media_upload_reminder">
        Take <b>clear</b> pictures of <b>robots</b> <i>only</i>.
    </string>
    <string name="rate_title">Enjoying Robot Scouter?</string>
    <string name="rate_message">
        While you’re waiting to get your scouting results, please rate Robot Scouter!
    </string>
    <string name="rate_positive">Rate</string>
    <string name="rate_negative">Never mind</string>
    <string name="rate_neutral">Remind me later</string>
    <string name="team_navigation_drawer_open_desc">Open navigation drawer</string>
    <string name="team_navigation_drawer_close_desc">Close navigation drawer</string>
    <string name="team_unknown_team_title">Unknown</string>
    <plurals name="team_delete_message">
        <item quantity="one">Delete team %s?</item>
        <item quantity="other">Delete the following teams?</item>
    </plurals>
    <string name="team_select_all_title">Select all</string>
    <string name="team_multiple_selected_message">Multiple teams selected</string>
    <plurals name="team_share_title">
        <item quantity="one">Share team %s</item>
        <item quantity="other">Share teams %s</item>
    </plurals>
    <plurals name="team_share_message">
        <item quantity="one">You’re invited to edit team %s with me in Robot Scouter!</item>
        <item quantity="other">You’re invited to edit teams %s with me in Robot Scouter!</item>
    </plurals>
    <plurals name="team_share_cta">
        <item quantity="one">Import team %s into Robot Scouter</item>
        <item quantity="other">Import teams %s into Robot Scouter</item>
    </plurals>
    <string name="team_sign_in_title">Sign in</string>
    <string name="team_signed_in_message">Successfully signed in!</string>
    <string name="team_anonymous_sign_in_failed_message">Anonymous sign in failed</string>
    <string name="team_sign_in_failed_message">Sign in failed</string>
    <string name="team_sign_in_try_again_title">Try again</string>
    <string name="donate_title">Donate</string>
    <string name="donate_amount">$%d</string>
    <string name="donate_monthly_message">Automatically donate each month</string>
    <string name="donate_cancel_message">
        Are you sure you don’t want to donate? We appreciate any donation no matter how small!
    </string>
    <string name="donate_thanks_message">Thank you!!! Any and all help is greatly appreciated!</string>
    <string name="update_title">Update</string>
    <string name="update_required_title">Update Robot Scouter</string>
    <string name="media_write_storage_rationale">
        Robot Scouter needs access to your storage to save your photo.
    </string>
    <string name="export_teams_title">Export teams</string>
    <string name="export_all_teams_title">Export all teams</string>
    <plurals name="export_share_title">
        <item quantity="one">Share team %s’s scouting data</item>
        <item quantity="other">Share teams %s’s scouting data</item>
    </plurals>
    <string name="export_overall_progress_title">Spreadsheet exporter</string>
    <string name="export_progress_title">Exporting spreadsheet</string>
    <string name="export_unnamed_template_title">Unnamed Template</string>
    <string name="export_unknown_template_title">Unknown Template</string>
    <string name="export_offline_rationale">
        Exporting spreadsheet while offline may yield incomplete results.
    </string>
    <string name="export_unsupported_device_rationale">Warning: you are using an unsupported device</string>
    <string name="export_write_storage_rationale">
        Robot Scouter needs access to your storage to create the spreadsheet file.
    </string>
    <string name="export_progress_hint">Exporting…</string>
    <string name="export_complete_title">Export complete for %s</string>
    <plurals name="export_complete_subtitle">
        <item quantity="one">1 file exported</item>
        <item quantity="other">%d files exported</item>
    </plurals>
    <plurals name="export_complete_summary">
        <item quantity="one">1 team exported</item>
        <item quantity="other">%d teams exported</item>
    </plurals>
    <plurals name="export_complete_message">
        <item quantity="one">Exported team %s.</item>
        <item quantity="other">Exported teams %s.</item>
    </plurals>
    <string name="export_initialize_status">Initializing</string>
    <string name="export_load_status">Loading teams</string>
    <plurals name="export_load_status_detail">
        <item quantity="one">Loading team %d</item>
        <item quantity="other">Loading teams %d-%d</item>
    </plurals>
    <string name="export_template_status">Exporting teams for %s</string>
    <string name="export_average_status">Exporting overview sheet</string>
    <string name="export_cleanup_status">Cleanup</string>
    <string name="export_json_status">Exporting JSON</string>
    <string name="export_average_column_title">Average</string>
    <string name="export_median_column_title">Median</string>
    <string name="export_max_column_title">Max</string>
    <string name="link_teams_imported_message">Teams successfully imported</string>
    <string name="link_uri_parse_error">Error: couldn’t parse URL</string>
    <string name="scout_activity_title">Scout editor</string>
    <string name="scout_tab_default_title">Scout %d</string>
    <string name="scout_offline_rationale">Offline. Data will be saved</string>
    <string name="scout_new_title">New scout/team</string>
    <string name="scout_new_title_long">Add a new scout or team</string>
    <string name="scout_new_team_number_hint">Team number</string>
    <string name="scout_add_title">Add scout</string>
    <string name="scout_add_template_not_cached_error">
        Error adding new scout:\nThe template you are attempting to use hasn’t been cached yet.
        Please add at least one scout while you have an internet connection so your template may be
        cached for offline use.
    </string>
    <string name="scout_add_media_title">Add media</string>
    <string name="scout_edit_template_title">Edit next scout template</string>
    <string name="details_title">Team details</string>
    <string name="details_name_hint">Team name</string>
    <string name="details_media_hint">Team media url</string>
    <string name="details_website_hint">Team website</string>
    <string name="details_malformed_url_error">Make sure you have a valid url.</string>
    <string name="details_action_visit_tba_title">TBA</string>
    <string name="details_action_visit_website_title">Website</string>
    <string name="scout_edit_name_title">Edit match name</string>
    <string name="scout_name_title">Scout name</string>
    <string name="scout_delete_title">Delete scout</string>
    <string name="scout_delete_message">Scout deleted</string>
    <string name="scout_edit_counter_value_title">Edit value</string>
    <string name="scout_counter_value_title">Value</string>
    <string name="scout_stopwatch_lap_added_message">Added stopwatch lap</string>
    <string name="template_activity_title">Scout template editor</string>
    <string name="template_new_title">New template</string>
    <string name="template_add_scout_selector_title">Add scout from template</string>
    <string name="template_set_default_title">Set as default template</string>
    <string name="template_set_default_message">Default template updated</string>
    <string name="template_tab_default_title">Template %d</string>
    <string name="template_edit_name_title">Edit template name</string>
    <string name="template_added_title">Template added</string>
    <string name="template_added_message">Template added and set as default</string>
    <string name="template_share_title">Share the %s template</string>
    <string name="template_share_message">
        You’re invited to edit the %s template with me in Robot Scouter!
    </string>
    <string name="template_share_cta">Import the %s scouting template into Robot Scouter</string>
    <string name="template_access_denied_error">Access denied: template owned by another user</string>
    <string-array name="template_new_options">
        <item>Match Scout</item>
        <item>Pit Scout</item>
        <item>Blank Scout</item>
    </string-array>
    <string name="template_move_cancelled_rationale">
        Move cancelled: another user updated the template while you were reordering items.
    </string>
    <string name="metric_header_add_title">Add header</string>
    <string name="metric_header_name_hint">Header name</string>
    <string name="metric_checkbox_add_title">Add checkbox</string>
    <string name="metric_checkbox_name_hint">Checkbox name</string>
    <string name="metric_counter_add_title">Add counter</string>
    <string name="metric_counter_name_hint">Counter name</string>
    <string name="metric_counter_unit_hint">Unit</string>
    <string name="metric_stopwatch_add_title">Add stopwatch</string>
    <string name="metric_stopwatch_name_hint">Stopwatch name</string>
    <string name="metric_stopwatch_start_title">Start</string>
    <string name="metric_stopwatch_stop_title">Stop (%s)</string>
    <string name="metric_stopwatch_cycle_title">Cycle %d</string>
    <string name="metric_stopwatch_cycle_average_title">Average</string>
    <string name="metric_note_add_title">Add note</string>
    <string name="metric_note_name_hint">Note name</string>
    <string name="metric_note_value_hint">Text</string>
    <string name="metric_spinner_add_title">Add item selector</string>
    <string name="metric_spinner_name_hint">Item selector name</string>
    <string name="metric_spinner_item_name_hint">Item name</string>
    <string name="template_remove_metrics_title">Remove all metrics</string>
    <string name="template_delete_title">Delete template</string>
    <string name="settings_activity_title">Settings</string>
</resources>