<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TemplateListActivity">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_colorable_24dp"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_set_default_template"
        android:title="@string/template_set_default_title" />

    <item
        android:id="@+id/action_remove_metrics"
        android:title="@string/template_remove_metrics_title" />

    <item
        android:id="@+id/action_delete_template"
        android:title="@string/template_delete_title" />

</menu>
