<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.scouting.scoutlist.ScoutListActivity">

    <item
        android:id="@+id/action_new_scout"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/scout_add_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_media"
        android:icon="@drawable/ic_add_a_photo_white_24dp"
        android:title="@string/scout_add_media_title"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit_template"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:title="@string/scout_edit_template_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit_team_details"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:title="@string/details_title"
        app:showAsAction="ifRoom" />

</menu>
