<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scouting.templatelist.TemplateListActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleMarginTop="@dimen/spacing_large" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.supercilex.robotscouter.util.ui.views.SupportVectorDrawablesTextView
            style="@style/RobotScouter.Tutorial.NoContentHint"
            android:text="@string/tutorial_no_templates_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:drawableTopCompat="@drawable/ic_content_paste_grey_96dp" />

        <com.supercilex.robotscouter.util.ui.views.UnscrollableViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.constraint.ConstraintLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|end"
        android:padding="@dimen/spacing_large"
        app:layout_behavior="com.supercilex.robotscouter.ui.scouting.templatelist.FabMenuBehavior"
        app:menu_backgroundColor="@color/fam_background"
        app:menu_colorNormal="@color/colorAccent"
        app:menu_colorPressed="@color/colorAccent"
        app:menu_colorRipple="@color/colorAccent"
        app:srcCompat="@drawable/ic_add_white_24dp">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/add_header"
            style="@style/RobotScouter.Fab.Metric"
            app:fab_label="@string/metric_header_add_title" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/add_checkbox"
            style="@style/RobotScouter.Fab.Metric"
            app:fab_label="@string/metric_checkbox_add_title" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/add_stopwatch"
            style="@style/RobotScouter.Fab.Metric"
            app:fab_label="@string/metric_stopwatch_add_title" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/add_note"
            style="@style/RobotScouter.Fab.Metric"
            app:fab_label="@string/metric_note_add_title" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/add_counter"
            style="@style/RobotScouter.Fab.Metric"
            app:fab_label="@string/metric_counter_add_title" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/add_spinner"
            style="@style/RobotScouter.Fab.Metric"
            app:fab_label="@string/metric_spinner_add_title" />

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>
